<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by Adam Elaoumari on 09/08/20 00:46
  ~  * Copyright (c) 2020 . All rights reserved.
  ~  * Last modified 16/05/20 00:12
  ~  */
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:theme="@style/AppTheme.NoActionBar"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/main_layers"
    android:layout_height="match_parent"
    tools:context="com.adamlbs.reportaggression.RegisterActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layers"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context="com.adamlbs.reportaggression.RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/inscription" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="-5dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_fields">

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginLeft="100dp"
        android:background="@android:color/transparent"
        android:hint="@string/full_name"

        android:inputType="textPersonName"
        android:padding="5dp" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="-5dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_fields">

        <EditText android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginLeft="100dp"
            android:background="@android:color/transparent"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="5dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="-5dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_fields">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginLeft="100dp"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="-5dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_fields">

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="100dp"
            android:background="@android:color/transparent"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"

            android:padding="5dp" />

    </RelativeLayout>


    <ImageButton
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="79dp"
        android:layout_marginBottom="-5dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"

        android:background="@drawable/sign_up_2_background"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <ImageButton
        android:id="@+id/btnRegisterLogin"
        android:layout_width="wrap_content"
        android:layout_height="79dp"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:layout_marginBottom="-5dp"

        android:background="@drawable/sign_in_2_background"
        android:text="@string/log_in"
        android:textColor="@android:color/white" />

</LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
