<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adamlbs.reportaggression.BusSelect">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
        <TextView
            android:id="@+id/welcomeText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp" />
    </com.google.android.material.appbar.AppBarLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00304769"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="50dp"
        tools:context="com.adamlbs.reportaggression.ReportActivy">

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/bus_line"
            android:prompt="@string/country__prompt" />

        <Button
            android:id="@+id/lineselect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#f05924"
            android:text="@string/line"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#aaa"
            android:text="@string/stats"
            android:textColor="@android:color/white" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>